<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aboutmebmi"
    android:orientation="vertical"
    tools:context=".aboutmeActivity">

    <Button
        android:id="@+id/buttonExitF"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginLeft="300dp"
        android:background="@drawable/ic_action_exit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13sp"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/colorButtom"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello2_blank_fragment"
        android:textColor="@color/colorButtom"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello3_blank_fragment"
        android:textColor="@color/colorButtom"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="60sp"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />
</LinearLayout>
