<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl">
        <Button
            android:id="@+id/buttonExit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_action_exit" />

        <Button
            android:id="@+id/buttonaboutme"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left|end"
            android:background="@drawable/ic_person_pin" />


    </LinearLayout>

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mainText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/weightGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/w60_0kg"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorAccent"
        android:imeOptions="actionNext"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/heightGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/h_160_0cm"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorAccent"
        android:imeOptions="actionDone"
       android:singleLine="true"/>

    <Button
        android:id="@+id/calcute"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:text="@string/textButom"
        android:layout_marginTop="70dp"/>

</LinearLayout>